# chip8-interpreter

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
cmake/: CompilerWarnings.cmake  Conan.cmake
include/: CMakeLists.txt  chip8cpu.h
include/cpu_lib/: memory.hpp  register.hpp  stack.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  memory_unit_test.cpp  register_unit_test.cpp  stack_unit_test.cpp
